<resources>
    <string name="app_name">Jokes</string>
    <string name="loremIpsum">LoremIpsum</string>
    <string name="change_list">Change LIst</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer">Answer</string>
    <string name="AddJoke">Add Joke</string>
    <string name="question">Question</string>
    <string name="category">Category</string>
    <string name="NoJokes">Шутки кончились</string>
    <string name="load_more_jokes">Load more jokes</string>
    <string name="clear_db">Clear DB</string>
    <string name="clear_network_cahce">clear network cahce</string>
    <string name="clear_network_db">clear network DB</string>
    <string name="delete">Delete</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favoutites">Favoutites</string>
    <string name="home">Home</string>
    <string name="favourites">favourites</string>
</resources>